# towr2025

towr/: .gitignore  CMakeLists.txt
towr/include/towr/: nlp_formulation.h  parameters.h
towr/include/towr/constraints/: base_height_constraint.h  base_motion_constraint.h  dynamic_constraint.h  ee_linear_constraint.h  force_constraint_discretized.h  range_of_motion_constraint.h  terrain_constraint.h  terrain_constraint_hard.h  torque_constraint.h  torque_constraint_discretized.h
towr/include/towr/costs/: angular_momentum_cost.h  base_height_cost.h  ee_base_pos_cost.h  energy_cost.h
towr/include/towr/models/: dynamic_model.h  kinematic_model.h  single_rigid_body_dynamics.h
towr/include/towr/models/examples/: anymal_model.h  biped_model.h  hyq_model.h  monoped_model.h
towr/include/towr/optimizer/: towr_optimizer.h
towr/include/towr/utils/: save_data.h
towr/include/towr/variables/: angular_converter.h  euler_converter.h  nodes_variables.h  nodes_variables_phase_based.h  rotvec_converter.h  spline_holder.h  variable_names.h
towr/scripts/: create_simple_animation.py  create_simple_animation_biped.py
towr/src/: nlp_formulation.cc  parameters.cc
towr/src/constraints/: base_height_constraint.cc  base_motion_constraint.cc  dynamic_constraint.cc  ee_linear_constraint.cc  force_constraint.cc  force_constraint_discretized.cc  range_of_motion_constraint.cc  terrain_constraint.cc  terrain_constraint_hard.cc  torque_constraint.cc  torque_constraint_discretized.cc
towr/src/costs/: angular_momentum_cost.cc  base_height_cost.cc  ee_base_pos_cost.cc  energy_cost.cc
towr/src/helpers/: euler_converter.cc  rotvec_converter.cc  spline_holder.cc
towr/src/models/: dynamic_model.cc  single_rigid_body_dynamics.cc
towr/src/optimizer/: towr_optimizer.cc
towr/src/utils/: save_data.cpp
towr/src/variables/: nodes_variables.cc  nodes_variables_phase_based.cc
towr/test/: backflip_example.cc  biped_example.cc  hopper_example.cc  optimizer_demo.cc  procedural_example.cc  squat_jump_example.cc  yaw_spin_example.cc
